--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,7 +28,9 @@
 
 <% if user_signed_in? && current_user == @post.user %>
   <%= link_to 'Edit', edit_post_path(@post) %> |
-  <%= link_to 'Destroy', @post, method: :delete, class: 'destroy-button', data: { confirm: 'Are you sure?' } %> |
+  <%= link_to "Destroy", post_path(@post), data: {
+        turbo_method: :delete,
+        turbo_confirm: "Are you sure?" } %> |
 <% end %>
 <%= link_to 'Back to Posts', posts_path %>
 
