--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -1,10 +1,11 @@
 <body>
 
-  <div class="container">
-    <div class="section">
-      <h2>Jakiś ciekawy tekst i treść strony, może skróty postów czy coś</h2>
-      <!-- Dodaj treść swojej strony tutaj -->
-    </div>
+<div class="container">
+  <div class="section">
+    <h2> Hej! Fajnie, że jesteś! </h2>
+    <h3> Dołącz do nas i zanurz się w świat pełen interesujących historii, wartościowych porad i inspirujących pomysłów.
+      Odkrywaj, komentuj, dziel się swoimi przemyśleniami i baw się dobrze! Cieszymy się, że jesteś z nami :) </h3>
   </div>
-  
-  </body>
+</div>
+
+</body>
